[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "cuddlewrap"
version = "0.1.0"
description = "A minimal LLM tool-calling harness"
requires-python = ">=3.12"
dependencies = ["ollama", "prompt_toolkit"]

[project.scripts]
cw = "cuddlewrap.main:main"
